# gituni

./: funzioni.h  lib_statistica.h
2023/: .gitignore  CMakeLists.txt  CmakeLists.txt  Lezione1.C
2023/Esami/IntegraliDoppi/: main.cpp
2023/Esami/IntegraliDoppi/Models/: EquazioniDifferenziali.h  Integral.h  IntegralMc.h  Vettore.h
2023/Esami/Prova1/: main.cpp
2023/Esami/Prova2/: main.cpp
2023/Esami/Prova3/: main.cpp
2023/Esami/Prova4/Models/: Bisezione.h
2023/Laboratorio/Esercizio0/: main.cpp
2023/Laboratorio/Esercizio0/Models/: Bisezione.h  EquazioniDifferenziali.h
2023/Lezione1/: CMakeLists.txt  main.cpp
2023/Lezione10/Esercizio0/: main.cpp
2023/Lezione10/Esercizio1/: main.cpp
2023/Lezione10/Esercizio2/AnalisiDati/: CMakeLists.txt  main.cpp
2023/Lezione10/Esercizio2/GeneraDati/: main.cpp
2023/Lezione10/Esercizio2/Models/: IntegralMc.h
2023/Lezione10/Esercizio2/data/: MonteCarloData_5000.txt  MonteCarloData_HitOrMiss_500.txt
2023/Lezione12/Esercizio0/: main.cpp
2023/Lezione12/Esercizio0/Models/: Solutore.h
2023/Lezione12/Esercizio2/GeneraDati/: main.cpp
2023/Lezione2/: main.cpp
2023/Lezione2/Models/: Vettore.h
2023/Lezione3/Esercizio0/Models/: Vettore.h
2023/Lezione3/Esercizio1/: main.cpp
2023/Lezione3/Esercizio1/Models/: Vettore.h
2023/Lezione3/Esercizio2/: CMakeLists.txt
2023/Lezione3/Esercizio2/Models/: Vettore.h
2023/Lezione3/Esercizio3/: main.cpp
2023/Lezione4/Esercizio0/: CMakeLists.txt
2023/Lezione4/Esercizio1/: main.cpp
2023/Lezione4/Esercizio2/Models/: Vettore.h
2023/Lezione4/Esercizio3/: CMakeLists.txt  main.cpp
2023/Lezione5/Esercizio1/: CMakeLists.txt  main.cpp
2023/Lezione5/Esercizio1/Models/: Posizione.h
2023/Lezione5/Esercizio2/: main.cpp
2023/Lezione5/Esercizio2/Models/: Elettrone.h
2023/Lezione5/Esercizio3/Models/: CampoVettoriale.h  Posizione.h  PuntoMateriale.h
2023/Lezione5/Esercizio4/: CMakeLists.txt  main.cpp
2023/Lezione5/Esercizio4/Models/: Particella.h
2023/Lezione6/Esercizio0/Models/: Particella.h
2023/Lezione6/Esercizio2/: CMakeLists.txt  main.cpp
2023/Lezione6/Esercizio3/: main.cpp
2023/Lezione6/Esercizio3/Models/: Measure.h
2023/Lezione6/Esercizio4/: main.cpp
2023/Lezione6/Esercizio4/Models/: FunzioneBase.h  Measure.h
2023/Lezione6/Esercizio5/: CMakeLists.txt
2023/Lezione6/Esercizio6/: CMakeLists.txt
2023/Lezione7/Esercizio0/: main.cpp
2023/Lezione7/Esercizio0/Models/: Integral.h
2023/Lezione7/Esercizio1/: main.cpp
2023/Lezione7/Esercizio1/Models/: Integral.h
2023/Lezione7/Esercizio3/: main.cpp
2023/Lezione8/Esercizio2/: CMakeLists.txt  main.cpp
2023/Lezione8/Esercizio3/: main.cpp
2023/Lezione8/Esercizio4/: main.cpp
2023/Minisini_FrancescoGiuseppe_40098A/: main.cpp  makefile
2023/Minisini_FrancescoGiuseppe_40098A/Models/: Bisezione.h  EsperimentoCondensatore.h  EsperimentoPrisma.h  FunzioneBase.h  Integral.h  RandomGen.h
Compiti/: Es39.C  a.out
Minisini_40098A/Lezione4/Esercizio1/: CMakeLists.txt
(+261 files in other folders)
